# Paprika

./: .gitignore  CMakeLists.txt
src/: application.cpp
